<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_etInput" />

    <Button
        android:id="@+id/btSave"
        android:onClick="onSaveClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btSave" />

    <Button
        android:id="@+id/btAppend"
        android:onClick="onAppendClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btAppend" />

    <Button
        android:id="@+id/btOpen"
        android:onClick="onOpenClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btOpen" />

    <Button
        android:id="@+id/btClear"
        android:onClick="onClearClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btClear" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp" />

</LinearLayout>
